# DAI

./: 01_Intro.ipynb  README.md  gpt_connector.py  lectures.md  literature.md  missions.md  pyproject.toml  requirements.txt  talks.md
.github/workflows/: jekyll-gh-pages.yml
Submissions/: Insider trading - Joško Kristić, Keunwoo Kim, Fatima-zahra Jabir.ipynb  ReadMe
Submissions/AirBnB Berlin/: AirBnB.pptx  AirBnB_Berlin_Listings_final__prediction_models.ipynb
data/: Dataset_dayahead.csv  yield.csv
exercises/: 02_CausalInference.ipynb  02_CausalInference_solution.ipynb  02_CausalInference_students version.ipynb  03a_supervised_learning_students version.ipynb  03b_supervised_learning_students version.ipynb  03c_supervised_learning_students version.ipynb  04_unsupervised_learning_students version.ipynb  05a_deep_learning_students version.ipynb  05b_deep_learning_students version.ipynb
exercises_solution/: 02_CausalInference_students version.ipynb  03a_supervised_learning_students version.ipynb  03b_supervised_learning_students version.ipynb  03c_supervised_learning_students version.ipynb  04_unsupervised_learning_students version.ipynb  05a_deep_learning_students version.ipynb
lectures/: 00_Intro.ipynb  01_Intro.ipynb  01_Paradoxon.ipynb  01a_Paradoxon.ipynb  02_CausalInference.ipynb  02_CausalInference_tutorial_solution.ipynb  03a_supervised_learning.ipynb  03b_supervised_learning.ipynb  03c_supervised_learning.ipynb  04_unsupervised_learning.ipynb  05a_deep_learning.ipynb  05a_deep_learning_.ipynb  05b_deep_learning.ipynb
lectures/talks/: talks.md
(+26 files in other folders)
